# bibtools

./: LICENSE  README.md  bibformat.py  cli.py  fabian.bib  middleware.py  mybigfatjournallist2.csv  pyproject.toml
bibtools/: __main__.py  bibformat.py  cli.py
dblp/: dblpbooktitle.py  dblpconstants.py  dblpfunctions.py
